--- a/07_1D_cellular/synchronic/synchronic1DmodUniformed/pde2pyde.cfg
+++ b/07_1D_cellular/synchronic/synchronic1DmodUniformed/pde2pyde.cfg
@@ -3,5 +3,6 @@ export VERYBEGIN="  '''What is purpose of this block below?'''"
 export BEGIN="  #block:"                    # { "begin"
 export END="'''DELETE THIS LINE'''"         # } "end"
 export BREAK=""                             # break;
+export FORCOMMENT='# loop over "\2"'
 export PROCDECLCOMMENT='# Any sideeffects on globals?'
 export FUNDECLCOMMENT='# => \2'
