--- a/pde2pyde.cfg
+++ b/pde2pyde.cfg
@@ -1,5 +1,7 @@
+export LINEDELETINGMARKER="'''DELETE THIS LINE...'''" 
 export VERYBEGIN="  '''block:'''" 
 export BEGIN="  '''block:'''"                    # { "begin"
-export END=""                                   # } "end"
+export END="$LINEDELETINGMARKER"                 # } "end"
+export BREAK=""
 export PROCDECLCOMMENT='# Any globals modified?'
 export FUNDECLCOMMENT='# => \2'
