First stage prepariation for Python translation for particles examples

--- a/pde2pyde.cfg
+++ b/pde2pyde.cfg
@@ -1,7 +1,5 @@
-export LINEDELETINGMARKER="'''DELETE THIS LINE...'''" 
 export VERYBEGIN="  '''block:'''" 
 export BEGIN="  '''block:'''"                    # { "begin"
-export END="$LINEDELETINGMARKER"                 # } "end"
-export BREAK=""
+export END=""                                   # } "end"
 export PROCDECLCOMMENT='# Any globals modified?'
 export FUNDECLCOMMENT='# => \2'
