--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # git ls-files --others --exclude-from=.git/info/exclude
 # Lines that start with '#' are comments.
+# @date 2025-11-10 (last modification)
 # For a project mostly in C, the following would be a good set of
 # exclude patterns (uncomment them if you want to use them):
 # *.[oa]
@@ -43,3 +44,5 @@ NBuild/
 application.*
 *.class
 ._bak/
+libraries/
+movies/
