--- a/TASK08_voter/pde2pyde.cfg
+++ b/TASK08_voter/pde2pyde.cfg
@@ -1,3 +1,4 @@
+# @date 2025-11-10 (last mofification)
 export LINEDELETINGMARKER="'''DELETE THIS LINE...'''" 
 export VERYBEGIN="  '''block:'''" 
 export BEGIN="  '''block:'''"                    # { "begin"
