date markers and some comment fixex in 09_OOP/

--- a/09_OOP/pde2pyde.cfg
+++ b/09_OOP/pde2pyde.cfg
@@ -1,3 +1,4 @@
+# @date 2025-11-10 (https://github.com/borkowsk/bookProcessingEN)
 export VERYBEGIN="  '''block:'''" 
 export BEGIN="  '''block:'''"                    # { "begin"
 export END=""                                   # } "end"
