Comments modification in 08_2D_cellular/

--- a/08_2D_cellular/asynchronic/pde2pyde.cfg
+++ b/08_2D_cellular/asynchronic/pde2pyde.cfg
@@ -1,3 +1,4 @@
+# @date 2025-11-10 (last inspection)
 export VERYBEGIN="  '''What is it doing below?'''" 
 export BEGIN="  #block:"                    # { "begin"
 export END=""                               # } "end"
