--- a/08_2D_cellular/synchronic/pde2pyde.cfg
+++ b/08_2D_cellular/synchronic/pde2pyde.cfg
@@ -1,3 +1,4 @@
+# @date 2025-11-10 (last instpection)
 export LINEDELETINGMARKER="'''DELETE THIS LINE...'''" 
 export VERYBEGIN="  '''block:'''" 
 export BEGIN="  '''block:'''"                    # { "begin"
