Fixing comments in 07_1D_cellular/

--- a/07_1D_cellular/synchronic/pde2pyde.cfg
+++ b/07_1D_cellular/synchronic/pde2pyde.cfg
@@ -1,3 +1,4 @@
+## @date 2025-11-10 (https://github.com/borkowsk/bookProcessingEN)
 export LINEDELETINGMARKER="'''DELETE THIS LINE'''" # lines with such comments will be deleted.
 export VERYBEGIN="  '''What is purpose of this block below?'''" 
 export BEGIN="  #block:"                    # { "begin"
