--- a/07_1D_cellular/asynchronic/pde2pyde.cfg
+++ b/07_1D_cellular/asynchronic/pde2pyde.cfg
@@ -1,3 +1,4 @@
+# @date 2025-11-10 (https://github.com/borkowsk/bookProcessingEN)
 export VERYBEGIN="  '''block:'''" 
 export BEGIN="  '''block:'''"                    # { "begin"
 export END=""                                   # } "end"
